--- a/less/fonts.less
+++ b/less/fonts.less
@@ -1,15 +1,15 @@
 @font-face {
   font-weight: 400;
-  font-family: "Open Sans";
+  font-family: "TT Polls";
   font-style: normal;
-  src: url("../fonts/opensans.woff2") format("woff2"),
-    url("../fonts/opensans.woff") format("woff");
+  src: url("../fonts/TTPolls-Regular.woff2") format("woff2"),
+    url("../fonts/TTPolls-Regular.woff") format("woff");
 }
 
 @font-face {
   font-weight: 700;
-  font-family: "Open Sans";
+  font-family: "TT Polls";
   font-style: normal;
-  src: url("../fonts/opensansbold.woff2") format("woff2"),
-    url("../fonts/opensansbold.woff") format("woff");
+  src: url("../fonts/TTPolls-Bold.woff2") format("woff2"),
+    url("../fonts/TTPolls-Bold.woff") format("woff");
 }
