--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -3,8 +3,9 @@ body {
   max-width: 100%;
   font-family: "Open Sans", "Arial", sans-serif;
   font-size: 16px;
-  line-height: 26px;
+  line-height: 1.7;
   font-weight: 400;
+  color: rgba(39,38,33,0.7);
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -25,7 +26,7 @@ a {
 }
 
 address {
-font-style: normal;
+  font-style: normal;
 }
 
 html {
@@ -43,6 +44,7 @@ figure {
 textarea,
 input,
 button {
+  display: block;
   font: inherit;
   border: none;
   outline: none;
@@ -74,4 +76,24 @@ button {
 .privacy_policy .button {
 	color: #F95454;
 	cursor: pointer;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.title {
+  font-family: "TT Polls", serif;
+  line-height: 1.2;
+  text-transform: uppercase;
+  color: #272621;
+}
+
+h1,
+h2,
+.title {
+  font-weight: bold;
+  font-size: 30px;
 }
