--- a/less/style.less
+++ b/less/style.less
@@ -10,3 +10,6 @@
 @import "blocks/menu";
 @import "blocks/btn";
 @import "blocks/promo";
+@import "blocks/area";
+@import "blocks/hit";
+@import "blocks/blog";
