--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -18,3 +18,26 @@
     .transition();
   }
 }
+
+.btn-border {
+  width: 250px;
+  max-width: 100%;
+  height: 47px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 1;
+  font-weight: 600;
+  font-size: 16px;
+  color: @red;
+  background-color: rgba(255,255,255,0);
+  border: 1px dashed #DC1E1E;
+  .transition();
+  
+  &:hover,
+  &:active {
+    color: #fff;
+    background-color: @red;
+    .transition();
+  }
+}
