--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -97,3 +97,22 @@ h2,
   font-weight: bold;
   font-size: 30px;
 }
+
+.title--deco {
+  position: relative;
+  padding-bottom: 32px;
+  text-align: center;
+  
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 55px;
+    height: 16px;
+    background-image: url(../img/icons/rombs.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+}
