--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -116,3 +116,20 @@ h2,
     background-size: contain;
   }
 }
+
+.title--left {
+  position: relative;
+  padding-bottom: 32px;
+  
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 55px;
+    height: 16px;
+    background-image: url(../img/icons/rombs.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+}
