--- a/less/style.less
+++ b/less/style.less
@@ -15,3 +15,8 @@
 @import "blocks/blog";
 @import "blocks/benefits";
 @import "blocks/video";
+@import "blocks/info";
+@import "blocks/diler";
+@import "blocks/footer";
+@import "blocks/social";
+@import "blocks/payment";
