--- a/less/blocks/area.less
+++ b/less/blocks/area.less
@@ -1,7 +1,8 @@
 .area {
-  padding-top: 20px;
+  padding-top: 35px;
   padding-bottom: 40px;
   background-color: #FAF7F5;
+  border-bottom: 1px dashed rgba(39,38,33,0.3);
 }
 
 .area__list {
@@ -11,6 +12,7 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  margin-top: 55px;
 }
 
 .area__item {
@@ -58,5 +60,9 @@
       border-color: @red;
       .transition();
     }
+  }
+  
+  sup {
+    font-size: 12px;
   }
 }
