--- a/less/blocks/benefits.less
+++ b/less/blocks/benefits.less
@@ -1,7 +1,8 @@
 .benefits {
-  padding-top: 20px;
+  padding-top: 35px;
   padding-bottom: 40px;
   background-color: #FAF7F5;
+  border-bottom: 1px dashed rgba(39,38,33,0.3);
 }
 
 .benefits__list {
@@ -9,6 +10,7 @@
   list-style: none;
   display: flex;
   justify-content: space-between;
+  margin-top: 60px;
 }
 
 .benefits__item {
