--- a/less/blocks/blog.less
+++ b/less/blocks/blog.less
@@ -1,6 +1,10 @@
 .blog {
-  padding-top: 20px;
+  padding-top: 35px;
   padding-bottom: 70px;
+}
+
+.blog__slider {
+  margin-top: 35px;
 }
 
 .blog__slide {
@@ -29,7 +33,7 @@
 
 .blog__title {
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 7px;
   font-family: "Oswald", serif;
   font-weight: 600;
   font-size: 18px;
@@ -87,8 +91,8 @@
   &::after {
     content: "";
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 3px;
+    right: 10px;
     width: 35px;
     height: 15px;
     background-image: url(../img/icons/arrow.svg);
