--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -8,7 +8,7 @@
   justify-content: space-between;
   align-items: center;
   padding-top: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
 }
 
 .header__call {
@@ -30,6 +30,7 @@
 
 .header__tel {
   display: block;
+  margin-bottom: 5px;
   font-family: "TT Polls", serif;
   font-weight: bold;
   font-size: 20px;
@@ -59,7 +60,7 @@
 .header__basket {
   position: relative;
   display: block;
-  padding-left: 44px;
+  padding-left: 45px;
   font-size: 14px;
   line-height: 20px;
 
