--- a/less/blocks/logo.less
+++ b/less/blocks/logo.less
@@ -1,6 +1,6 @@
 .logo {
   font-size: 13px;
-  line-height: 20px;
+  line-height: 1;
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: rgba(255,255,255,0.5);
