--- a/less/blocks/diler.less
+++ b/less/blocks/diler.less
@@ -1,5 +1,5 @@
 .diler {
-  padding-top: 85px;
+  padding-top: 88px;
   padding-bottom: 85px;
   background-image: url(../img/images/bg-2.jpg);
   background-repeat: no-repeat;
@@ -20,10 +20,12 @@
   .title {
     margin-top: 15px;
     margin-bottom: 0;
+    line-height: 1.1;
   }
 }
 
 .subtitle {
+  margin: 0;
   font-family: "Oswald", serif;
   font-weight: 600;
   font-size: 24px;
@@ -34,8 +36,8 @@
 
 .diler__aside {
   position: absolute;
-  bottom: 100%;
-  right: -20px;
+  top: -30px;
+  right: 0;
   font-size: 13px;
   line-height: 1;
   color: #272621;
@@ -56,7 +58,7 @@
 
 .diler__btn {
   width: 232px;
-  margin-left: 50px;
+  margin-right: 100px;
   font-family: "Oswald", serif;
   font-size: 18px;
   letter-spacing: 0.05em;
