--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -3,7 +3,16 @@
   background-color: #272621;
   
   .payment {
-    margin-top: 55px;
+    margin-top: 60px;
+  }
+  
+  .logo,
+  .logo img {
+    width: 100%;
+  }
+  .logo {
+    margin-bottom: 30px;
+    font-size: 17px;
   }
 }
 
@@ -15,22 +24,27 @@
 
 .footer__bottom {
   padding-bottom: 20px;
-  padding-top: 25px;
+  padding-top: 15px;
   align-items: center;
-  font-size: 14px;
+  font-size: 13px;
   line-height: 1.2;
   border-top: 1px solid rgba(255,255,255,0.3);
 }
 
 .footer__top {
   padding-top: 50px;
-  padding-bottom: 45px;
+  padding-bottom: 50px;
 }
 
 .footer__info {
   width: 250px;
+  margin-right: -15px;
   font-size: 13px;
   line-height: 1.2;
+}
+
+.footer__block {
+  padding-top: 15px;
 }
 
 .footer__block--contacts {
@@ -39,7 +53,7 @@
 
 .footer__title {
   margin-top: 0;
-  margin-bottom: 15px;
+  margin-bottom: 17px;
   font-family: "TT Polls", serif;
   font-size: 22px;
   line-height: 24px;
@@ -51,7 +65,7 @@
   list-style: none;
   
   li {
-    margin-bottom: 10px;
+    margin-bottom: 6px;
     
     a:hover,
     a:active {
