--- a/less/blocks/hit.less
+++ b/less/blocks/hit.less
@@ -9,6 +9,10 @@
   margin-top: 60px;
 }
 
+.hit__slider {
+  margin-top: 35px;
+}
+
 .hit__slide {
   position: relative;
   height: auto;
@@ -47,8 +51,8 @@
 
 .hit__img {
   width: 100%;
-  height: 188px;
-  margin-bottom: 8px;
+  height: 165px;
+  margin-bottom: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -63,7 +67,7 @@
 
 .hit__title {
   margin-top: 0;
-  margin-bottom: 45px;
+  margin-bottom: 48px;
   font-family: "TT Polls", serif;
   font-size: 20px;
   line-height: 1.2;
