--- a/less/blocks/modal.less
+++ b/less/blocks/modal.less
@@ -2,6 +2,7 @@
   width: 400px;
   max-width: 100%;
   padding: 20px 45px;
+  padding-top: 25px;
   background: #FFFFFF;
   border: 1px dashed rgba(26, 26, 26, 0.3);
   overflow: hidden;
@@ -9,8 +10,8 @@
   &::before {
     content: "";
     position: absolute;
-    top: -72px;
-    right: -72px;
+    top: -75px;
+    right: -75px;
     width: 144px;
     height: 144px;
     background: #272621;
@@ -24,7 +25,7 @@
   margin-bottom: 30px;
   font-family: "Oswald", serif;
   text-align: center;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 30px;
   line-height: 1.2;
   color: @red;
@@ -34,6 +35,7 @@
   max-width: 260px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 65px;
   text-align: center;
   font-weight: 600;
   font-size: 18px;
