--- a/less/blocks/payment.less
+++ b/less/blocks/payment.less
@@ -13,4 +13,8 @@
   justify-content: center;
   align-items: center;
   background-color: #000000;
+  
+  &:last-child {
+    margin-right: 0;
+  }
 }
