--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -1,11 +1,16 @@
 .video {
-  padding-top: 20px;
-  padding-bottom: 70px;
+  padding-top: 35px;
+  padding-bottom: 55px;
+  
+  .title {
+    font-size: 34px;
+  }
 }
 
 .video__wrap {
   display: flex;
   justify-content: space-between;
+  margin-top: 35px;
 }
 
 .video__right {
