--- a/less/blocks/menu.less
+++ b/less/blocks/menu.less
@@ -1,4 +1,5 @@
 .menu {
+  position: relative;
   border-top: 1px solid rgba(255,255,255,0.1);
 }
 
@@ -72,6 +73,7 @@
   top: 15px;
   width: 14px;
   height: 14px;
+  .transition();
   
   svg {
     stroke: #fff;
