--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -83,6 +83,9 @@
     display: block;
     width: 100%;
     height: auto;
+    min-height: 100%;
+    max-width: none;
+    object-fit: cover;
     .transition();
   }
   
