--- a/less/blocks/media.less
+++ b/less/blocks/media.less
@@ -15,6 +15,10 @@
   .promo__img {
     width: ~"calc(100% - 385px)";
   }
+  .promo__next,
+  .promo__prev {
+    display: none;
+  }
   .diler__btn,
   .promo__info {
     margin-right: 0;
