--- a/less/style.less
+++ b/less/style.less
@@ -22,4 +22,8 @@
 @import "blocks/payment";
 @import "blocks/modal";
 @import "blocks/form";
+@import "blocks/catalog";
+@import "blocks/pages";
+@import "blocks/breadcrumbs";
+@import "blocks/filter";
 @import "blocks/media";
