--- a/less/blocks/filter.less
+++ b/less/blocks/filter.less
@@ -68,7 +68,7 @@
   flex-wrap: wrap;
   align-items: center;
   padding-top: 55px;
-  padding-bottom: 55px;
+  padding-bottom: 35px;
 }
 
 .filter__radio {
@@ -79,6 +79,7 @@
   display: block;
   position: relative;
   margin-right: 60px;
+  margin-bottom: 20px;
   padding-left: 50px;
   font-size: 14px;
   line-height: 20px;
@@ -172,6 +173,7 @@
     outline: none;
     
     &:last-of-type {
+      margin-left: -15px;
       border-color: @red;
     }
   }
