--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -120,3 +120,34 @@
     text-decoration: underline;
   }
 }
+
+.form__number {
+  display: flex;
+  width: 169px;
+  border: 1px solid rgba(26, 26, 26, 0.2);
+}
+
+.form__num {
+  width: 30%;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  color: @red;
+  font-size: 36px;
+  
+  &:hover,
+  &:active {
+    color: #272621;
+  }
+}
+
+.form__value {
+  width: 40%;
+  height: 40px;
+  font-family: "Oswald", serif;
+  font-weight: 500;
+  font-size: 18px;
+  color: #272621;
+  text-align: center;
+  background-color: rgba(255,255,255,0);
+}
