--- a/less/style.less
+++ b/less/style.less
@@ -26,4 +26,7 @@
 @import "blocks/pages";
 @import "blocks/breadcrumbs";
 @import "blocks/filter";
+@import "blocks/card";
+@import "blocks/tabs";
+@import "blocks/delivery";
 @import "blocks/media";
