--- a/less/blocks/card.less
+++ b/less/blocks/card.less
@@ -1,5 +1,6 @@
 .card__wrap {
-  margin-bottom: 90px;
+  margin-bottom: 85px;
+  padding-top: 15px;
   display: flex;
   justify-content: space-between;
 }
@@ -7,6 +8,11 @@
 .card__slider {
   position: relative;
   width: 572px;
+  
+  .hit__labels {
+    top: 20px;
+    left: 20px;
+  }
 }
 
 .card__info {
@@ -42,7 +48,7 @@
   letter-spacing: 0.05em;
   text-transform: uppercase;
   border: 1px dashed #FFFFFF;
-  margin-bottom: 35px;
+  margin-bottom: 30px;
 }
 
 .gallery-top {
