--- a/less/blocks/delivery.less
+++ b/less/blocks/delivery.less
@@ -5,11 +5,14 @@
   line-height: 20px;
   
   td {
-    width: 50%;
     height: 42px;
     
     &:first-child {
+      width: 55%;
       color: rgba(39,38,33,0.7);
+    }
+    &:last-child {
+      width: 45%;
     }
   }
 }
@@ -21,6 +24,7 @@
 .delivery__return p {
   position: relative;
   width: 100%;
+  margin: 0;
   display: flex;
   align-items: baseline;
   padding-left: 50px;
