--- a/less/blocks/basket.less
+++ b/less/blocks/basket.less
@@ -1,6 +1,11 @@
 .basket {
   overflow: hidden;
   margin-bottom: 40px;
+  
+  h1 {
+    margin-top: 0;
+    margin-bottom: 30px;
+  }
 }
 
 .basket__wrap {
@@ -77,6 +82,7 @@
 }
 
 .basket__remove {
+  width: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -91,6 +97,7 @@
     fill: #272621;
     width: 11px;
     height: 11px;
+    display: block;
     margin-left: 13px;
     .transition();
   }
@@ -113,11 +120,12 @@
   top: 0;
   right: 0;
   width: 370px;
+  max-width: 100%;
   border: 1px dashed rgba(26, 26, 26, 0.3);
 }
 
 .basket__bottom {
-  padding: 30px;
+  padding: 35px 30px;
   border-top: 1px dashed rgba(26, 26, 26, 0.3);
 }
 
@@ -127,6 +135,7 @@
   color: #272621;
   font-size: 24px;
   line-height: 1;
+  text-align: center;
   
   span {
     font-weight: 300;
@@ -136,12 +145,12 @@
 
 .basket__sum {
   width: 100%;
-  padding: 30px;
+  padding: 25px 30px;
   font-size: 14px;
   color: #242B33;
   
   td {
-    height: 30px;
+    height: 35px;
   }
   
   td:first-child {
