--- a/less/blocks/area.less
+++ b/less/blocks/area.less
@@ -3,6 +3,17 @@
   padding-bottom: 40px;
   background-color: #FAF7F5;
   border-bottom: 1px dashed rgba(39,38,33,0.3);
+  
+  &--internal {
+    padding-top: 52px;
+    padding-bottom: 23px;
+    background-color: #fff;
+    border-bottom: 0;
+    
+    .area__list {
+      margin-top: 0;
+    }
+  }
 }
 
 .area__list {
