--- a/less/blocks/tabs.less
+++ b/less/blocks/tabs.less
@@ -1,5 +1,11 @@
 .tabs {
   margin-bottom: 45px;
+  
+  &--construct {
+    .tabs__title {
+      margin-bottom: 39px;
+    }
+  }
 }
 
 .tabs__block {
