--- a/less/style.less
+++ b/less/style.less
@@ -30,4 +30,6 @@
 @import "blocks/tabs";
 @import "blocks/delivery";
 @import "blocks/basket";
+@import "blocks/construct";
+@import "blocks/block";
 @import "blocks/media";
