--- a/less/blocks/block.less
+++ b/less/blocks/block.less
@@ -8,7 +8,9 @@
 }
 
 .block__title {
+  width: 120px;
   margin: 0;
+  padding-top: 10px;
   font-size: 14px;
   line-height: 20px;
   color: #272621;
@@ -82,11 +84,14 @@
   
   img {
     display: block;
+    width: 100%;
+    height: auto;
     border-radius: 50%;
   }
   
   &--roof {
     img {
+      width: auto;
       border-radius: 0;
     }
     
