--- a/less/blocks/construct.less
+++ b/less/blocks/construct.less
@@ -12,22 +12,27 @@
   width: ~"calc(100% - 400px)";
   
   .title {
+    margin-top: 0;
+    margin-bottom: 35px;
     text-align: center;
+    font-size: 36px;
   }
 }
 
 .construct__info {
   width: 370px;
+  max-width: 100%;
   border: 1px dashed rgba(26, 26, 26, 0.3);
 }
 
 .construct__top {
   padding: 30px;
+  padding-bottom: 17px;
 }
 
 .construct__title {
   margin-top: 0;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
   font-family: "Oswald", serif;
   font-weight: 500;
   font-size: 24px;
@@ -64,7 +69,7 @@
   }
   
   td {
-    height: 50px;
+    height: 58px;
   }
   
   td:last-child {
@@ -90,7 +95,7 @@
 
 .construct__comment {
   position: absolute;
-  top: 0;
+  top: 5px;
   left: 0;
   opacity: 0.5;
   font-weight: 600;
@@ -118,4 +123,24 @@
   &:hover {
     opacity: 1;
   }
+}
+
+.construct__itogo {
+  margin: 0;
+  font-family: "Oswald", serif;
+  color: #272621;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1;
+  text-align: center;
+  
+  span {
+    font-weight: 400;
+    font-size: 40px;
+  }
+}
+
+.construct__bottom {
+  padding: 30px;
+  border-top: 1px dashed rgba(26, 26, 26, 0.3);
 }
