--- a/less/blocks/area.less
+++ b/less/blocks/area.less
@@ -5,6 +5,7 @@
   border-bottom: 1px dashed rgba(39,38,33,0.3);
   
   &--internal {
+    margin-bottom: 25px;
     padding-top: 52px;
     padding-bottom: 23px;
     background-color: #fff;
